--- a/build_and_run.yml
+++ b/build_and_run.yml
@@ -1,54 +1,67 @@
 ---
-- name: install software
-  hosts: db
+- name: Set Up Build Environment
+  hosts: build-host
   become: yes
-
   tasks:
-    - name: Ensure java is present
+    - name: We need Java
       apt:
         name: default-jdk
-        state: present
-    - name: Ensure git is present
+        state: latest
+    - name: We need git
       apt:
         name: git
-        state: present
-    - name: Ensure maven is present
+        state: latest
+    - name: We need maven
       apt:
         name: maven
-        state: present
-    - name: Create a directory if it does not exist
+        state: latest
+    - name: Make dir for build
       file:
-        path: /root/dz
+        path: /opt/build/boxfuse-sample-java-war-hello
         state: directory
         mode: '0755'
-    - name: Git boxfuse repository is cloned
+
+- name: Set Up FrontEnd Environment
+  hosts: app
+  become: yes
+  tasks:
+  - name: We need Tomcat
+    apt:
+      name: tomcat9
+      state: latest
+  - name: Ensure tomcat service is started
+    service:
+      name: tomcat9
+      state: started
+
+- name: Build an App
+  hosts: build-host
+  become: yes
+  tasks:
+    - name: Clone boxfuse repository
       git:
+        clone: yes
         repo: https://github.com/boxfuse/boxfuse-sample-java-war-hello.git
-        dest: /root/dz/boxfuse-sample-java-war-hello
-    - name: Running mvn clean
-      shell: "mvn -f /root/dz/boxfuse-sample-java-war-hello/pom.xml package"
+        dest: /opt/build/boxfuse-sample-java-war-hello
+    - name: Build with maven
+      command: mvn package
+      args:
+        chdir: /opt/build/boxfuse-sample-java-war-hello
     - name: Fetch build
       fetch:
         src: /root/dz/boxfuse-sample-java-war-hello/target/hello-1.0.war
         dest: /tmp/hello-1.0.war
         flat: yes
 
-- name: install software
-  hosts: web
+- name: Run an App
+  hosts: app
   become: yes
-
   tasks:
-  - name: Ensure tomcat package is present
-    apt:
-      name: tomcat9
-      state: present
-
-  - name: Ensure tomcat service is started
-    service:
-      name: tomcat9
-      state: started
-
   - name: Copy build
     copy:
       src: /tmp/hello-1.0.war
-      dest: /var/lib/tomcat9/webapps/
+      dest: /usr/local/tomcat/webapps/
+  - name: Restart tomcat
+    service:
+      name: tomcat9
+      state: restarted
