--- a/build_and_run.yml
+++ b/build_and_run.yml
@@ -60,7 +60,9 @@
   - name: Copy build
     copy:
       src: /tmp/hello-1.0.war
-      dest: /usr/local/tomcat/webapps/
+      dest: /var/lib/tomcat9/webapps
+      owner: tomcat
+      group: tomcat
   - name: Restart tomcat
     service:
       name: tomcat9
